crates/canvas-cli/tests/e2e/snapshots/quiz_submit_no_session.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 8,
  "freshness": [],
  "generated_at": "2040-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "60001"
  },
  "outcome": "refused",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 3,
    "cost": null,
    "storage": 0
  },
  "result": {
    "code": "refused",
    "details": {
      "reason": "no_session"
    },
    "http_status": null,
    "message": "quiz 60101 has no session in progress; run `canvas quiz questions` first",
    "server_errors": []
  },
  "schema": "canvas-cli/error@1",
  "warnings": []
}
