crates/canvas-cli/tests/e2e/snapshots/quizzes_table.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: body
---
exit: 0
--- stdout ---
  ID     TITLE                  TYPE          DUE                     QUESTIONS    POINTS    STATE  
  101    Week 3 Reading Quiz    assignment    2026-09-18T23:59:00Z    5            10               
--- stderr ---
