crates/canvas-cli/tests/e2e/snapshots/receipts_export_json.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [],
  "generated_at": "2026-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "1"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "bytes": 0,
    "path": "<scratch>/receipt.json",
    "receipt_id": "00000000-0000-4000-8000-00000000000r"
  },
  "schema": "canvas-cli/receipts@1",
  "warnings": []
}
