crates/canvas-cli/tests/e2e/snapshots/receipts_list_json.snap
---
source: crates/canvas-cli/tests/e2e/harness.rs
expression: value
---
{
  "exit": 0,
  "freshness": [],
  "generated_at": "2026-09-09T17:05:12Z",
  "identity": {
    "key": "<identity>",
    "origin": "<origin>",
    "user_id": "1"
  },
  "outcome": "ok",
  "partial": [],
  "profile": null,
  "requests": {
    "api": 0,
    "cost": null,
    "storage": 0
  },
  "result": {
    "journals": [
      {
        "acknowledged_at": null,
        "approval": {
          "at": "2026-09-09T17:05:12Z",
          "channel": "yes-flag",
          "consumer": null,
          "plan_sha256": "<digest>"
        },
        "assignment_id": "9",
        "assignment_name": "Problem Set 1",
        "baseline_attempt": 0,
        "course_code": null,
        "course_id": "100",
        "created_at": "<clock>",
        "error": null,
        "journal_id": "00000000-0000-4000-8000-00000000000j",
        "kind": "online_text_entry",
        "not_submitted_evidence": null,
        "operation": null,
        "owner": "n/a",
        "plan_id": "<id>",
        "post_status": 200,
        "posted": {
          "attachments": [],
          "attempt": 1,
          "body_sha256": "8f7f27cedc8acf48084063da78451ae9962da2446289983c782736f78476b683",
          "evidence": "post-response",
          "excused": null,
          "late": false,
          "missing": false,
          "response_sha256": "19fbb9f8c3139bdc9a93f7b9678be0d70f0ef67c7ec08dcefb5ddcbd8114213c",
          "submission_id": "77",
          "submission_type": "online_text_entry",
          "submitted_at": "2026-09-09T17:05:12Z",
          "submitted_at_local": "2026-09-09T13:05:12-04:00",
          "url": null,
          "workflow_state": "submitted"
        },
        "readback": {
          "attachments": [],
          "body_sha256": null,
          "late": null,
          "submitted_at": null,
          "submitted_at_local": null
        },
        "receipt_id": "00000000-0000-4000-8000-00000000000r",
        "response_kind": null,
        "server_match": null,
        "state": "submitted",
        "superseded": false,
        "updated_at": "<clock>",
        "uploaded_file_ids": []
      }
    ]
  },
  "schema": "canvas-cli/receipts@1",
  "warnings": []
}
